# xt-beaglebone-black-projects

./: CMakeLists.txt  README.md  package.xml
element14-roadtest/: package.xml
element14-roadtest/src/: cam_subscriber.cpp  usb_cam_reader.cpp
home-router/: network-repeater.md
home-router/boot/: uEnv.txt
include/: cam_subscriber.h  usb_cam_reader.h
resources/: bbb_properties.xml  cam_publisher.xml  rviz_config.rviz
src/: bbb.cpp  cam_publisher.cpp  cam_subscriber.cpp  usb_cam_reader.cpp
wifi-hotspot/: README.md
wifi-hotspot/etc/hostapd/: hostapd.conf
wifi-hotspot/etc/network/: interfaces
