<?xml version="1.0"?>
<package>
  <name>bbb_roadtest</name>
  <version>0.0.1</version>
  <description>Element14 BeagleBone Black roadtest</description>

  <maintainer email="extoxesses@gmail.com">Exto</maintainer>
  <author email="extoxesses@gmail.com">Exto</author> -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> image_transport </build_depend>
  <build_depend> pcl_ros </build_depend>
  <build_depend> roscpp </build_depend>
  <build_depend> sensor_msgs </build_depend>
  <!--
  <build_depend> actionlib </build_depend>
  <build_depend> actionlib_msgs </build_depend>
  <build_depend> geometry_msgs </build_depend>
  <build_depend> laser_geometry </build_depend>
  <build_depend> libpcl-all-dev </build_depend>
  <build_depend> pcl_conversions </build_depend>
  <build_depend> tf </build_depend>
  -->
  <!--
  build_depend> std_msgs </build_depend>
  <build_depend> cv_bridge </build_depend>
  -->


  <run_depend> image_transport </run_depend>
  <run_depend> pcl_ros </run_depend>
  <run_depend> roscpp </run_depend>
  <run_depend> sensor_msgs </run_depend>
  <!--
  <run_depend> actionlib </run_depend>
  <run_depend> actionlib_msgs </run_depend>
  <run_depend> geometry_msgs </run_depend>
  <run_depend> laser_geometry </run_depend>
  <run_depend> libpcl-all </run_depend>
  <run_depend> pcl_conversions </run_depend>
  <run_depend> tf </run_depend>
  -->

</package>
